# MR2024

./: .gitignore  KorhutMA_ex0_3331506_20102.cpp  KorhutMA_ex1_3331506_20102.cpp  README.md  hellow world.sln  task0.c  task_0.c  task_1.c
0/: KorhutMA_ex1_3331506_20102.cpp  MeshkovED_ex0_3331506_20401.c  RyabkovNA_ex1_3331506_20102.cpp  Smirnov_1506_20102.cxx  task1.c  topics.org
Aksenov Maksim/: Matrix.cpp  bot3.ino  task1.c  task2.c  task2V3.c  task4.cpp  task4V2.cpp  task4V3.cpp  task5.ino
AkulovAA/: task1.c  taskO.c  курсовая работа АкуловАА АВЛ дерево.docx  курсовая работа.cpp
AleksandrovGA/: lineOmega.ino  task1.c
Arifullina_Alina/: 1_Матрицы.cpp  2_Greenhouse.ino
ArtamonovEA/: Coursework.docx  coursework.py  task1.c  (+8 more)
BazeltsevAA/MVP_bot/MVP_bot/check_widgets_video_1/: CMakeLists.txt  KeyWindow.cpp  KeyWindow.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  main.cpp  widget.h
BazeltsevAA/MVP_bot/MVP_bot/raspberrypi_1/: CMakeLists.txt  CommandProcessor.cpp  ConnectionInfo.h  Heartbeat.cpp  RollbackExecutor.cpp  UdpSocket.cpp  UdpSocket.h  VideoStreamer.cpp  connection.cpp  connection.h  main.cpp
Berko_VA/flightplanner/: CMakeLists.txt
Berko_VA/flightplanner/doxygen/html/: annotated.html  classes.html  classfpp_1_1FlightPathPlanner-members.html  classfpp_1_1FlightPathPlanner.html  classfpp_1_1FlightPathPlannerException-members.html  classfpp_1_1FlightPathPlannerException.html  classfpp_1_1FlightPathPlannerException__inherit__graph.dot  dir_138e7ec0f81873bdd55906969d23843e.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7c6384fde8bf42b3ed417d4c40eef7a3.html  dir_b313eafe7af2bcd766b5218a0f951c29.html  dir_b75bd277c5cda1468401d485b04a5b37.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  flightpathplanner_8hpp_source.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  menudata.js  namespacefpp.html  namespacemembers.html  namespacemembers_type.html  namespaces.html
Berko_VA/flightplanner/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js
Berko_VA/flightplanner/doxygen/latex/: annotated.tex  classfpp_1_1FlightPathPlanner.tex  classfpp_1_1FlightPathPlannerException.tex  classfpp_1_1FlightPathPlannerException.tex.tmp  classfpp_1_1FlightPathPlannerException__inherit__graph.dot  hierarchy.tex  namespacefpp.tex  namespaces.tex  refman.tex
Berko_VA/flightplanner/include/: flightpathplanner.hpp
Berko_VA/flightplanner/src/: flightpathplanner.cpp  main.cpp
Berko_VA/matrix_cpp/: CMakeLists.txt
Berko_VA/matrix_cpp/Doxygen/html/: annotated.html  classMatrix-members.html  classMatrix.html  classMatrixException-members.html  classMatrixException.html  classMatrixException__coll__graph.dot  classes.html  config_8hpp_source.html  dir_18017a7709858a8080ab8a022ee2864b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7c6384fde8bf42b3ed417d4c40eef7a3.html  dir_90a3d0b9476532c2b8e703b1d28c1b3f.html  dir_b313eafe7af2bcd766b5218a0f951c29.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_de56e4164e6ea99570df0f4585cc742d.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  matrix_8hpp_source.html  matrixexception_8hpp_source.html  menudata.js  structMatrixView-members.html  structMatrixView.html
Berko_VA/matrix_cpp/Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
Berko_VA/matrix_cpp/Doxygen/latex/: annotated.tex  classMatrix.tex  classMatrixException.tex  classMatrixException.tex.tmp  classMatrixException__coll__graph.dot  hierarchy.tex  refman.tex  structMatrixView.tex
Berko_VA/matrix_cpp/include/: matrix.hpp  matrixexception.hpp
Berko_VA/matrix_cpp/src/: main.cpp  matrix.cpp
KorhutMA/task2/: CMakeLists.txt  main.c
KorhutMA/task2/matrix/: matrix.c  matrix.h
LapkinYD/robot_yolo/client2-main/: CMakeLists.txt  heartbeat.cpp  main.cpp  start.sh  text_client.cpp
LapkinYD/robot_yolo/client2-main/include/: client.h  command_sender.h  keyboard_handler.h  main_window.h  ocr_detector.h  sensor_receiver.h  video_widget.h  yolo_detector.h
LapkinYD/robot_yolo/client2-main/src/: client.cpp  command_sender.cpp  keyboard_handler.cpp  main_window.cpp  ocr_detector.cpp  sensor_receiver.cpp  video_widget.cpp  yolo_detector.cpp
LapkinYD/robot_yolo/server2-main/: CMakeLists.txt  LICENSE  heartbeat.cpp  rm.bash  robot.cpp  start_all.sh  text_server.cpp  video_sender.c
MakarovIM/shortest_flight/: .gitignore  CMakeLists.txt  README.md
MakarovIM/shortest_flight/include/: csv_flight_parser.hpp  error_handler.hpp  flight_graph.hpp  logger.hpp  utils.hpp
MakarovIM/shortest_flight/src/: csv_flight_parser.cpp  flight_graph.cpp  logger.cpp  main.cpp  utils.cpp
SharifyanovAR/Zryachiy_ezdun/Qt/Robot_ezdun_control/: CMakeLists.txt  batch_command_sender.cpp  batch_command_sender.h  command_logger.h  command_sender.cpp  command_sender.h  config.h  data_receiver.cpp  dual_video_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  video_streamer.cpp  video_streamer.h  yolo_detector.h
SharyginAV/course/smart_farm_app/: CMakeLists.txt  main.cpp  main.qml  sensors_and_leds_handler.cpp  sensors_and_leds_handler.h
Skornyakova/курсовая/with_cv/: CMakeLists.txt  cam_with_trackbar.cpp
(+693 files in other folders)
